[package]
name = "sc-prometheus"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "prometheus utils"
edition = "2018"

[dependencies]
sysinfo = "0.10.2"
hyper = { version = "0.13.1", default-features = false, features = ["stream"] }
lazy_static = "1.4"
log = "0.4.8"
prometheus = { version = "0.7", features = ["nightly", "process"]}
tokio = "0.2"
sp-runtime = { package = "sp-runtime",path = "../../primitives/runtime" }
fg-primitives = { package = "sp-finality-grandpa", path = "../../primitives/finality-grandpa" }
sp-core = { package = "sp-core",path = "../../primitives/core" }
grandpa = { package = "finality-grandpa", version = "0.10.1", features = ["derive-codec"] }
derive_more = "0.99"
grafana-data-source = { version = "2.0.0", path = "../grafana-data-source" }
futures-util = { version = "0.3.1", default-features = false, features = ["io"] }


[target.'cfg(not(target_os = "unknown"))'.dependencies]
async-std = { version = "1.0.1", features = ["unstable"] }
