[package]
name = "sc-prometheus"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "prometheus utils"
edition = "2018"

[dependencies]
hyper = "0.13.1" 
lazy_static = "1.4"
log = "0.4.8"
prometheus = { version = "0.7", features = ["nightly", "process"]}
tokio = "0.2.4"
sp-runtime = { package = "sp-runtime",path = "../../primitives/runtime" }
