[package]
description = "Prometheus exporter server"
name = "prometheus-exporter"
version = "0.8.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
hyper = { version = "0.13.1", default-features = false, features = ["stream"] }
prometheus = { version = "0.7", features = ["nightly", "process"]}
tokio = "0.2"
futures-util = { version = "0.3.1", default-features = false, features = ["io"] }
lazy_static = "1.4"
derive_more = "0.99"
sysinfo = "0.10.2"
sp-runtime = { package = "sp-runtime",path = "../../primitives/runtime" }
fg-primitives = { package = "sp-finality-grandpa", path = "../../primitives/finality-grandpa" }
sp-core = { package = "sp-core",path = "../../primitives/core" }
grandpa = { package = "finality-grandpa", version = "0.10.1", features = ["derive-codec"] }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
async-std = { version = "1.0.1", features = ["unstable"] }
